core/force-app/main/default/objects/ReschedulerJob__mdt/ReschedulerJob__mdt.object-meta.xml
<CustomObject>
    <description>Rescheduler Job</description>
    <label>Rescheduler Job</label>
    <pluralLabel>Rescheduler Jobs</pluralLabel>
</CustomObject>