core/force-app/main/default/objects/ReschedulerJob__mdt/fields/Minutes__c.field-meta.xml
<CustomField>
    <fullName>Minutes__c</fullName>
    <description>Minutes between Jobs</description>
    <label>Minutes</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>